# DesktopDefender

./: .env.example  .gitignore  README.md  biome.json  iconCreator.sh  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: format.yml  format:rust.yml  format:tsx.yml  lint.yml
src-tauri/: .env_example  .gitignore  Cargo.toml  ouis.csv  tauri.conf.json
src-tauri/db/: setup_db.sh
src-tauri/icons/: DD.icns
src-tauri/src/: main.rs
src-tauri/src/config/: config.rs
src-tauri/src/db_service/: db_service.rs  mod.rs
src-tauri/src/devices/: devices.rs
src-tauri/src/helpers/: call_http_port.rs  check_admin_creds.rs  mod.rs  port_scanner.rs
src-tauri/src/home/: connection.rs
src-tauri/src/network_monitor/: info.rs  lookup.rs  mod.rs  monitor.rs
src-tauri/src/new_devices/: mod.rs  new_devices.rs
src-tauri/src/router/: find_ip.rs  find_mac.rs  mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/components/: Navbar.tsx
src/app/devices/: page.tsx
src/app/monitor/: page.tsx
src/app/new_devices/: page.tsx
src/app/router/: page.tsx
src/components/: Card.tsx  Chart.tsx  ConnectionStatus.tsx  DDPageContainer.tsx  DDText.tsx  InfoTable.tsx  Navbar.tsx  PacketTable.tsx  PieChart.tsx
src/components/core/: ExternalLink.tsx
src/types/: Device.ts  Manufacturer.ts  Network.ts
