[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = ["shell-open"] }
threadpool = "1.8.1"
pcap = "1.3.0"
pnet = "0.34.0"
colored = "2.1.0"
hickory-resolver = "0.24.0"
once_cell = "1.19.0"
parking_lot = "0.12.1"
ipinfo = "3.0.0"
tokio = { version = "1.37.0", features = ["full"] }
dotenvy = "0.15.7"
rusqlite = "0.26.0"
csv = "1.1"
chrono = "0.4"
regex = "1.10.4"

[dependencies.reqwest]
version = "0.11"
features = ["blocking"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
